# codecombat-python

./: README.md  pyproject.toml
src/codecombat/: __init__.py  client.py  environment.py
src/codecombat/core/: client_wrapper.py
src/codecombat/resources/: __init__.py
src/codecombat/resources/auth/: client.py
src/codecombat/resources/clans/: __init__.py  client.py
src/codecombat/resources/clans/types/: __init__.py  clan_response.py
src/codecombat/resources/classrooms/: __init__.py  client.py
src/codecombat/resources/classrooms/types/: __init__.py  ace_config.py  level.py  level_session_response.py  member_stat.py  play_stats.py  state.py
src/codecombat/resources/commons/: __init__.py
src/codecombat/resources/commons/types/: __init__.py  course.py  (+9 more)
src/codecombat/resources/stats/: __init__.py  client.py
src/codecombat/resources/users/: __init__.py  client.py
src/codecombat/types/: __init__.py  clan_response.py  classroom_response.py  classroom_response_courses_item.py  classroom_response_with_code.py  classroom_response_with_code_courses_item.py  classrooms_create_request_ace_config.py  classrooms_get_members_stats_response_item.py  classrooms_get_members_stats_response_item_stats.py  datetime_string.py  level_session_response.py  level_session_response_level.py  level_session_response_state.py  license_stats_response.py  playtime_stats_response.py  user_response.py  user_response_license.py  user_response_o_auth_identities_item.py  user_response_stats.py  user_response_subscription.py  users_create_request_hero_config.py  users_create_request_role.py
(+6 files in other folders)
